<resources>
    <string name="app_name">mEat</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCbNPy5hqDEQXXXXXXXXXXXXXXXXXXXX
    </string>

    <string name="step_of">Step %1$d of %2$d</string>
    <string name="section_format">Section : %1$d</string>
    <string name="sign_in">S I G N \t  I N</string>
    <string name="sign_up_1">S I G N \t  U P</string>
    <string name="register">R E G I S T E R</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New user?   </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="other">Anything goes here</string>
    <string name="phone_username">Phone number</string>
    <string name="password">Password</string>
    <string name="sign_in_title">SIGN IN</string>
    <string name="tab">\t</string>
    <string name="loginFacebookButton">Sign in with Facebook</string>
    <string name="loginGoogleButton">Log in with Google</string>

    <!--On boarding-->
    <string name="title_array_1">Food is Ready</string>
    <string name="title_array_2">Social Hub</string>
    <string name="title_array_3">Find nearby Eateries</string>
    <string name="title_array_4">Empower your food services</string>


    <string name="description_array_1">Never queue to eat! Process food order and payment and eat exactly when you have to</string>
    <string name="description_array_2">Connect with the food community, learn and share food/cooking ideas</string>
    <string name="description_array_3">Know what\'s always on the menu of your favourite eatery nearby</string>
    <string name="description_array_4">Connect your food entrepreneurial ventures to your customers and be patronised</string>


    <string name="FACEBOOK_APP_ID">1040169739465889</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
    <string name="use_email_username">Use Email/Username</string>
    <string name="sign_in_1">Sign In</string>

    <!--OTHERS-->
    <string name="back">Please click BACK again to exit</string>
    <string name="verification">VERIFICATION</string>
    <string name="verification_text">Verification code has been sent to you on your mobile phone. Please enter it below</string>
    <string name="verification_message">You will get SMS with a confirmation code to this number.</string>
    <string name="_234">+234</string>
    <string name="_80_3211_2222">080 3211 2222</string>
    <string name="please_input_code_below">Please input code below</string>
    <string name="two_mins">02:00</string>
    <string name="continue_">CONTINUE</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="time_up">00:00</string>
    <string name="home">Home</string>
    <string name="food_order">Food Order</string>
    <string name="social_hub">Social Hub</string>
    <string name="favourite">Favourite</string>
    <string name="test">TEST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Navigation drawer-->
    <string name="drawer_item_1">Profile</string>
    <string name="drawer_item_2">My Activity</string>
    <string name="drawer_item_3">Trending</string>
    <string name="drawer_item_4">Settings</string>
    <string name="drawer_item_5">About</string>
    <string name="drawer_item_6">Help</string>
    <string name="drawer_item_7">Logout</string>
    <string name="category">Others</string>
    <string name="personal">Personal</string>

    <string name="drawer_item_option1">Option 1</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_option2">Option 2</string>
    <string name="drawer_item_option3">Option 3</string>
    <string name="theme_view">Theme</string>
    <string name="home_item_1_1">Events</string>
    <string name="home_item_1_2">Orders</string>
    <string name="home_item_1_3">Camera</string>
    <string name="home_item_2_1">Notification</string>
    <string name="home_item_2_2">Wallet</string>
    <string name="home_item_2_3">Inbox</string>
    <string name="register_1">Register</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="terms_and_conditions">Apply Terms and Conditions</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>


</resources>
